--- a/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
@@ -55,7 +55,7 @@
 								</div>
 								<div class="col text-end">
 									<p style="height:27px;">&nbsp;</p>
-									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getJournalize()" data-test="create-button" onsubmit="return false;">Calculation</button>
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getJournalize()" data-test="create-button" onsubmit="return false;">Journalize</button>
 									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
 								</div>
 							</div>
