--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -224,159 +224,153 @@
 			},
 		};
 
-			function main() {
-				// 그리드 초기화 및 데이터 로드
-				console.log("Initializing SlickGrid...");
-				getList(
-							(input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-						);
-			}
+		function main() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			getList(
+						(input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
+					);
+		}
 
-			/**
-			* Transaction callback 함수
-			**/
-			function fn_callback(result){
-				//console.log("fn_callback : " + result.id);
-				if( result.resultCd == "S" ){
-					switch (result.id){
-						case "SelectList" :
-							fn_setGrid(result.data);
-							break;
-						case "insertList" :
-							alert("Successfully Insert");
-							main();
-							break;
-						case "updateList" :
-							alert("Successfully Updated");
-							main();
-							break;
-						case "deleteList" :
-							alert("Successfully Deleted");
-							main();
-							break;
-					}
-				} else if( result.resultCd == "E") {
-				} else {
-					console.log("fn_callback result : ", result);
+		/**
+		* Transaction callback 함수
+		**/
+		function fn_callback(result){
+			//console.log("fn_callback : " + result.id);
+			if( result.resultCd == "S" ){
+				switch (result.id){
+					case "SelectList" :
+						fn_setGrid(result.data);
+						break;
+					case "insertList" :
+						alert("Successfully Insert");
+						main();
+						break;
+					case "updateList" :
+						alert("Successfully Updated");
+						main();
+						break;
+					case "deleteList" :
+						alert("Successfully Deleted");
+						main();
+						break;
 				}
+			} else if( result.resultCd == "E") {
+			} else {
+				console.log("fn_callback result : ", result);
 			}
+		}
 
-			function fn_setGrid(data){
-				data = fn_getDataForTree(data, "atitCd", "hgrkAtitCd", "acLvlCd", 2)
-				
-				dataView = new Slick.Data.DataView();
-				grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
+		function fn_setGrid(data){
+			data = fn_getDataForTree(data, "atitCd", "hgrkAtitCd", "acLvlCd", 2)
+			
+			dataView = new Slick.Data.DataView();
+			grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
 
-				// Make the grid respond to DataView change events.
-				dataView.onRowCountChanged.subscribe(function (e, args) {
-					grid.updateRowCount();
-					grid.render();
-				});
-
-				dataView.onRowsChanged.subscribe(function (e, args) {
-					grid.invalidate();
-					grid.render();
-				});
-
-				// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-				dataView.beginUpdate();
-				dataView.setItems(data, unqId);
-				dataView.setFilter(treeFilter);
-				dataView.endUpdate();
-
-				// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-				grid.onBeforeSort.subscribe(function (e, args) {
-				return true;
-				});                   
-
-				grid.onClick.subscribe(function (e, args) {
-					if (e.getNativeEvent().target.classList.contains("toggle")) {
-						var item = dataView.getItem(args.row);
-						if (item) {
-							if (!item._collapsed) {
-								item._collapsed = true;
-							} else {
-								item._collapsed = false;
-							}
-							dataView.updateItem(item[unqId], item);
-						}
-						e.stopImmediatePropagation();
-					}
-				});
-
-				grid.setSelectionModel(new Slick.CellSelectionModel());
-				grid.registerPlugin(new Slick.AutoTooltips());
-	
-				// set keyboard focus on the grid
-				//grid.getCanvasNode().focus();
-				grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
-	
-				grid.onAddNewRow.subscribe(function (e, args) {
-					var newItem = args.item;
-					var column = args.column;
-					dataView.beginUpdate();
-					dataView.setItems(data);
-					dataView.endUpdate();
-					grid.updateRowCount();
-					grid.render();
-				});
-	
-				grid.onBeforeEditCell.subscribe(function (e, args) {
-					console.log("onBeforeEditCell");
-				});
-	
-				grid.onCellChange.subscribe(function (e, args) {
-					dataView.beginUpdate();
-					dataView.setItems(data);
-					dataView.endUpdate();
-					grid.updateRowCount();
-					grid.render();
-				});
-	
-				grid.onValidationError.subscribe(function (e, args) {
-					// handle validation errors originating from the CompositeEditor
-					if (args.validationResults) {
-						let errorMsg = args.validationResults.msg || "";
-						if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-							if (args.validationResults.errors) {
-								errorMsg += "\n";
-								args.validationResults.errors.forEach(function (error, errorIndex) {
-									const columnName = error.editor.args.column.id;
-									errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-								});
-							}
-							console.log(errorMsg);
-						}
-					} else {
-						alert(errorMessages);
-					}
-				});
-	
-				//grid.setActiveCell(0, 0);
-				console.log("SlickGrid initialized.");
-			}
-
-			// Download Excel functionality
-			document.getElementById("downloadExcel").addEventListener("click", function () {
-				const currDate = getCurrentDateTime();
-				const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-				const sheetName = "계정과목관리"; // 시트 이름
-				const gridColumns = columns; // SlickGrid의 컬럼 배열
-				const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-				exportToExcel(fileName, sheetName, gridColumns, gridData);
+			// Make the grid respond to DataView change events.
+			dataView.onRowCountChanged.subscribe(function (e, args) {
+				grid.updateRowCount();
+				grid.render();
 			});
+
+			dataView.onRowsChanged.subscribe(function (e, args) {
+				grid.invalidate();
+				grid.render();
+			});
+
+			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+			dataView.beginUpdate();
+			dataView.setItems(data, unqId);
+			dataView.setFilter(treeFilter);
+			dataView.endUpdate();
+
+			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+			grid.onBeforeSort.subscribe(function (e, args) {
+			return true;
+			});                   
+
+			grid.onClick.subscribe(function (e, args) {
+				if (e.getNativeEvent().target.classList.contains("toggle")) {
+					var item = dataView.getItem(args.row);
+					if (item) {
+						if (!item._collapsed) {
+							item._collapsed = true;
+						} else {
+							item._collapsed = false;
+						}
+						dataView.updateItem(item[unqId], item);
+					}
+					e.stopImmediatePropagation();
+				}
+			});
+
+			grid.setSelectionModel(new Slick.CellSelectionModel());
+			grid.registerPlugin(new Slick.AutoTooltips());
+
+			// set keyboard focus on the grid
+			//grid.getCanvasNode().focus();
+			grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+
+			grid.onAddNewRow.subscribe(function (e, args) {
+				var newItem = args.item;
+				var column = args.column;
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
+
+			grid.onBeforeEditCell.subscribe(function (e, args) {
+				console.log("onBeforeEditCell");
+			});
+
+			grid.onCellChange.subscribe(function (e, args) {
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
+
+			grid.onValidationError.subscribe(function (e, args) {
+				// handle validation errors originating from the CompositeEditor
+				if (args.validationResults) {
+					let errorMsg = args.validationResults.msg || "";
+					if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+						if (args.validationResults.errors) {
+							errorMsg += "\n";
+							args.validationResults.errors.forEach(function (error, errorIndex) {
+								const columnName = error.editor.args.column.id;
+								errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+							});
+						}
+						console.log(errorMsg);
+					}
+				} else {
+					alert(errorMessages);
+				}
+			});
+
+			//grid.setActiveCell(0, 0);
+			console.log("SlickGrid initialized.");
+		}
+
+		// Download Excel functionality
+		document.getElementById("downloadExcel").addEventListener("click", function () {
+			const currDate = getCurrentDateTime();
+			const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = "계정과목관리"; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
 
 		function openDetails(modalType) {
 
-			let hiddenColumns;
-			
-			if (modalType === "create") {
-				hiddenColumns = ["frstRegEmpNo","frstRegDtm"];
-			} else {
-				hiddenColumns = ["atitCd","frstRegEmpNo","frstRegDtm"];  // 컬럼 숨기기
-			}
+			let hiddenColumns = ["frstRegEmpNo","frstRegDtm"];
 
-			let options5 = [
+			let selAcLvlCd = [
 				{ value: "1", text: "1", column: "acLvlCd"},
 				{ value: "2", text: "2", column: "acLvlCd"},
 				{ value: "3", text: "3", column: "acLvlCd"},
@@ -388,31 +382,31 @@
 				{ value: "9", text: "9", column: "acLvlCd"},
 			];
 
-			let options6 = [
+			let selYn = [
 				{ value: "Y", text: "Y", column: " "},
 				{ value: "N", text: "N", column: " "}
 				];
 
-				let options7 = [
+			let selFsDvCd = [
 				{ value: "BS", text: "BS", column: "fsDvCd"},
 				{ value: "PL", text: "PL", column: "fsDvCd"}
-				];
+			];
 
-				let options8 = [
+			let selAcDvCd = [
 				{ value: "Assets",		text: "Assets",			column: "acDvCd"},
 				{ value: "Liabilities",	text: "Liabilities",	column: "acDvCd"},
 				{ value: "Capitals",	text: "Capitals",		column: "acDvCd"},
 				{ value: "Profit",		text: "Profit",			column: "acDvCd"},
 				{ value: "Loss",		text: "Loss",			column: "acDvCd"},
-				];
+			];
 
-				let options9 = [
+			let selAcKindCd = [
 				{ value: "AssetsSum",		text: "AssetsSum",		column: "acKindCd"},
 				{ value: "LiabilitiesSum",	text: "LiabilitiesSum",	column: "acKindCd"},
 				{ value: "CapitalSum",		text: "CapitalSum",		column: "acKindCd"},
 				{ value: "ProfitSum",		text: "ProfitSum",		column: "acKindCd"},
 				{ value: "LossSum",			text: "LossSum",		column: "acKindCd"}
-				];
+			];
 
 			grid.render();
 
@@ -597,55 +591,58 @@
 
 					// we add the date input to	to the form group element
 					formGroupElem.appendChild(dateInputContainer);
-					} else 
-					if( column.id === "acLvlCd" || column.id === "bkgAcYn" ||  column.id === "fsDvCd" || 
+				} else if( column.id === "acLvlCd" || column.id === "bkgAcYn" ||  column.id === "fsDvCd" || 
 					column.id === "acDvCd"  || column.id === "acKindCd" || column.id === "useYn" ) {
 	
-					const selectInput = document.createElement('select');
-					selectInput.className = "form-select";
-					selectInput.dataset.editorid = column.id;
-	 				
-					const defaultOption = document.createElement('option');
-					defaultOption.value = "";
-					defaultOption.textContent = "- options -";
-					selectInput.appendChild(defaultOption);
-					
-					let optionsData = [];
-					
-					 if(column.id === "acLvlCd"){
-					 	optionsData = options5;
-				  	} else if (column.id === "fsDvCd"){
-					 	optionsData = options7;
-				  	} else if (column.id === "acDvCd"){
-						 optionsData = options8;
-		 			  	} else if (column.id === "acKindCd"){
-						 optionsData = options9;
-				  	} else {
-						 optionsData = options6;
-				  	}
+						const selectInput = document.createElement('select');
+						selectInput.className = "form-select";
+						selectInput.dataset.editorid = column.id;
+		 				
+						const defaultOption = document.createElement('option');
+						defaultOption.value = "";
+						defaultOption.textContent = "- options -";
+						selectInput.appendChild(defaultOption);
+						
+						let optionsData = [];
+						
+						if(column.id === "acLvlCd"){
+							optionsData = selAcLvlCd;
+						} else if (column.id === "fsDvCd"){
+							optionsData = selFsDvCd;
+						} else if (column.id === "acDvCd"){
+							optionsData = selAcDvCd;
+			 			} else if (column.id === "acKindCd"){
+							optionsData = selAcKindCd;
+						} else {
+							optionsData = selYn;
+						}
+		
+						optionsData.forEach(option => {
+							const optionElem = document.createElement('option');
+							optionElem.value = option.value;
+							optionElem.textContent = option.text;
+							selectInput.appendChild(optionElem);
+						});
 	
-				optionsData.forEach(option => {
-					const optionElem = document.createElement('option');
-					optionElem.value = option.value;
-					optionElem.textContent = option.text;
-					selectInput.appendChild(optionElem);
-				});
-	
-				if (modalType === "edit") {
-					selectInput.value = dataContext[column.field] || "";
+					if (modalType === "edit") {
+						selectInput.value = dataContext[column.field] || "";
+					}
+		
+					formGroupElem.appendChild(selectInput);
+				} else {
+					const inputElem = document.createElement('input');
+					inputElem.className = "form-control";
+					inputElem.dataset.editorid = column.id;
+					inputElem.value = (modalType === "edit" && dataContext) ? dataContext[column.field] : ""; // pre-filling in the edit mode;
+					formGroupElem.appendChild(inputElem);
+					
+					if(modalType === "edit" && column.id === "atitCd") {
+						inputElem.disabled = true;
+					}
 				}
-	
-				formGroupElem.appendChild(selectInput);
-			} else {
-				 const inputElem = document.createElement('input');
-				 inputElem.className = "form-control";
-				 inputElem.dataset.editorid = column.id;
-				 inputElem.value = (modalType === "edit" && dataContext) ? dataContext[column.field] : ""; // pre-filling in the edit mode;
-				 formGroupElem.appendChild(inputElem);
-			}
-	
-			colElem.appendChild(formGroupElem);
-			currentRow.appendChild(colElem);
+		
+				colElem.appendChild(formGroupElem);
+				currentRow.appendChild(colElem);
 			});
 	
 			if (modalColumns.length % columnsPerShow !== 0) {
@@ -666,12 +663,12 @@
 			*/
 			if (modalType === "edit" && !dataContext) {
 				alert("Current row is not editable");
-				return;
+			return;
 			} else if (modalType === "mass-selection") {
 				var selectedRowsIndexes = grid.getSelectedRows();
 				if (selectedRowsIndexes.length < 1) {
 					alert( "You must select some rows before trying to apply new value(s)" );
-					return;
+				return;
 				}
 			}
 			renewOptions(false);
@@ -764,7 +761,7 @@
 					if (input) {
 						formData[column.field] = input.value.trim();
 					}
-					 console.log("input테스트");
+					console.log("input테스트");
 				});
 				
 	
