--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -215,156 +215,156 @@
 			},
 		};
 
-			function main() {
-				// 그리드 초기화 및 데이터 로드
-				console.log("Initializing SlickGrid...");
-				getCsList(
-							(input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-						);
-			}
+		function main() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			getCsList(
+						(input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
+					);
+		}
 
 			
-			/**
-			* Transaction callback 함수
-			**/
-			function fn_callback(result){
-				//console.log("fn_callback : " + result.id);
-				if( result.resultCd == "S" ){
-					switch (result.id){
-						case "SelectList" :
-							fn_setGrid(result.data);
-							break;
-						case "insertList" :
-							alert("Successfully Insert");
-							main();
-							break;
-						case "updateList" :
-							alert("Successfully Updated");
-							main();
-							break;
-						case "deleteList" :
-							alert("Successfully Deleted");
-							main();
-							break;
-					}
-				} else if( result.resultCd == "E") {
-				} else {
-					console.log("fn_callback result : ", result);
+		/**
+		* Transaction callback 함수
+		**/
+		function fn_callback(result){
+			//console.log("fn_callback : " + result.id);
+			if( result.resultCd == "S" ){
+				switch (result.id){
+					case "SelectList" :
+						fn_setGrid(result.data);
+						break;
+					case "insertList" :
+						alert("Successfully Insert");
+						main();
+						break;
+					case "updateList" :
+						alert("Successfully Updated");
+						main();
+						break;
+					case "deleteList" :
+						alert("Successfully Deleted");
+						main();
+						break;
 				}
+			} else if( result.resultCd == "E") {
+			} else {
+				console.log("fn_callback result : ", result);
 			}
+		}
 
-			function fn_setGrid(data){
-				//dataView = new Slick.Data.DataView( { idField: unqId });
-				dataView = new Slick.Data.DataView();
-				grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
+		function fn_setGrid(data){
+			//dataView = new Slick.Data.DataView( { idField: unqId });
+			dataView = new Slick.Data.DataView();
+			grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
 
-				// Make the grid respond to DataView change events.
-				dataView.onRowCountChanged.subscribe(function (e, args) {
-					grid.updateRowCount();
-					grid.render();
-				});
-
-				dataView.onRowsChanged.subscribe(function (e, args) {
-					grid.invalidate();
-					grid.render();
-				});
-
-				// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-				dataView.setItems(data, unqId);
-
-				// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-				grid.onBeforeSort.subscribe(function (e, args) {
-				return true;
-				});                   
-
-				// 정렬
-				grid.onSort.subscribe(function (e, args) {
-				var cols = args.sortCols;
-
-				data.sort(function (dataRow1, dataRow2) {
-					for (var i = 0, l = cols.length; i < l; i++) {
-						var field  = cols[i].sortCol.field;
-						var sign   = cols[i].sortAsc ? 1 : -1;
-						var value1 = dataRow1[field],
-						value2 = dataRow2[field];
-						var result = (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-						if (result != 0) {
-						return result;
-						}
-					}
-				return 0;
-				});
-				grid.render();
-			});
-
-			grid.setSelectionModel(new Slick.CellSelectionModel());
-			grid.registerPlugin(new Slick.AutoTooltips());
-
-			// set keyboard focus on the grid
-			//grid.getCanvasNode().focus();
-			grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
-
-			grid.onAddNewRow.subscribe(function (e, args) {
-				var newItem = args.item;
-				var column = args.column;
-				dataView.beginUpdate();
-				dataView.setItems(data);
-				dataView.endUpdate();
+			// Make the grid respond to DataView change events.
+			dataView.onRowCountChanged.subscribe(function (e, args) {
 				grid.updateRowCount();
 				grid.render();
 			});
 
-			grid.onBeforeEditCell.subscribe(function (e, args) {
-				console.log("onBeforeEditCell");
-			});
-
-			grid.onCellChange.subscribe(function (e, args) {
-				dataView.beginUpdate();
-				dataView.setItems(data);
-				dataView.endUpdate();
-				grid.updateRowCount();
+			dataView.onRowsChanged.subscribe(function (e, args) {
+				grid.invalidate();
 				grid.render();
 			});
 
-			grid.onValidationError.subscribe(function (e, args) {
-				// handle validation errors originating from the CompositeEditor
-				if (args.validationResults) {
-					let errorMsg = args.validationResults.msg || "";
-					if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-						if (args.validationResults.errors) {
-							errorMsg += "\n";
-							args.validationResults.errors.forEach(function (error, errorIndex) {
-								const columnName = error.editor.args.column.id;
-								errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-							});
-						}
-						console.log(errorMsg);
+			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+			dataView.setItems(data, unqId);
+
+			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+			grid.onBeforeSort.subscribe(function (e, args) {
+			return true;
+			});                   
+
+			// 정렬
+			grid.onSort.subscribe(function (e, args) {
+			var cols = args.sortCols;
+
+			data.sort(function (dataRow1, dataRow2) {
+				for (var i = 0, l = cols.length; i < l; i++) {
+					var field  = cols[i].sortCol.field;
+					var sign   = cols[i].sortAsc ? 1 : -1;
+					var value1 = dataRow1[field],
+					value2 = dataRow2[field];
+					var result = (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+					if (result != 0) {
+					return result;
 					}
-				} else {
-					alert(errorMessages);
 				}
+			return 0;
 			});
+			grid.render();
+		});
 
-			//grid.setActiveCell(0, 0);
-			console.log("SlickGrid initialized.");
+		grid.setSelectionModel(new Slick.CellSelectionModel());
+		grid.registerPlugin(new Slick.AutoTooltips());
+
+		// set keyboard focus on the grid
+		//grid.getCanvasNode().focus();
+		grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+
+		grid.onAddNewRow.subscribe(function (e, args) {
+			var newItem = args.item;
+			var column = args.column;
+			dataView.beginUpdate();
+			dataView.setItems(data);
+			dataView.endUpdate();
+			grid.updateRowCount();
+			grid.render();
+		});
+
+		grid.onBeforeEditCell.subscribe(function (e, args) {
+			console.log("onBeforeEditCell");
+		});
+
+		grid.onCellChange.subscribe(function (e, args) {
+			dataView.beginUpdate();
+			dataView.setItems(data);
+			dataView.endUpdate();
+			grid.updateRowCount();
+			grid.render();
+		});
+
+		grid.onValidationError.subscribe(function (e, args) {
+			// handle validation errors originating from the CompositeEditor
+			if (args.validationResults) {
+				let errorMsg = args.validationResults.msg || "";
+				if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+					if (args.validationResults.errors) {
+						errorMsg += "\n";
+						args.validationResults.errors.forEach(function (error, errorIndex) {
+							const columnName = error.editor.args.column.id;
+							errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+						});
+					}
+					console.log(errorMsg);
+				}
+			} else {
+				alert(errorMessages);
 			}
+		});
 
-			// Download Excel functionality
-			document.getElementById("downloadExcel").addEventListener("click", function () {
-				const currDate = getCurrentDateTime();
-				const fileName = "WRKFIL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-				const sheetName = "파일관리"; // 시트 이름
-				const gridColumns = columns; // SlickGrid의 컬럼 배열
-				const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-				exportToExcel(fileName, sheetName, gridColumns, gridData);
-			});
+		//grid.setActiveCell(0, 0);
+		console.log("SlickGrid initialized.");
+		}
+
+		// Download Excel functionality
+		document.getElementById("downloadExcel").addEventListener("click", function () {
+			const currDate = getCurrentDateTime();
+			const fileName = "WRKFIL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = "파일관리"; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
 
 		// 신규버튼 누르면 동작하는 함수
 		function openDetails(modalType) {
 			
-			const hiddenColumns = [unqId,"usrNm","frstRegDtm"];
+			const hiddenColumns = ["usrNm","frstRegDtm"];
 			
-			let options6 = [
+			let selYn = [
 				{ value: "Y", text: "Y", column: " " },
 				{ value: "N", text: "N", column: " " },
 			];
@@ -487,68 +487,71 @@
 			// take the modal body
 
 			modalColumns.forEach((column, index) => {
-			// we create new row after 6 columms,
-			if (index % columnsPerShow === 0) {
-				currentRow = document.createElement("div");
-				currentRow.className = "row";
-				modalBodyElem.appendChild(currentRow);
-			}
-
-			const colElem = document.createElement("div");
-			colElem.className = "col-lg-6";
-
-			const formGroupElem = document.createElement("div");
-			formGroupElem.className = "mb-3";
-
-			const detailLabelitem = document.createElement("div");
-			detailLabelitem.className = "form-label";
-			detailLabelitem.textContent = column.name;
-
-			const inputElem = document.createElement("input");
-			inputElem.className = "form-control";
-			inputElem.dataset.editorid = column.id;
-			inputElem.value =
-			modalType == "edit" ? dataContext[column.field] : ""; // pre-filling in the edit mode;
-
-			formGroupElem.appendChild(detailLabelitem);
-
-			if ( column.id === "fileDelYn" || column.id === "uiSelYn" || column.id === "useYn" || column.id === "vrfUseYn") {
-				const selectInput = document.createElement("select");
-				selectInput.className = "form-select";
-				selectInput.dataset.editorid = column.id;
-
-				const defaultOption = document.createElement("option");
-				defaultOption.value = "";
-				defaultOption.textContent = "-options-";
-				selectInput.appendChild(defaultOption);
-
-				let optionsData = [];
-				optionsData = options6;
-
-				optionsData.forEach((option) => {
-					const optionElem = document.createElement("option");
-					optionElem.value = option.value;
-					optionElem.textContent = option.text;
-					selectInput.appendChild(optionElem);
-				});
-
-				if (modalType === "edit") {
-					selectInput.value = dataContext[column.field] || "";
+				// we create new row after 6 columms,
+				if (index % columnsPerShow === 0) {
+					currentRow = document.createElement("div");
+					currentRow.className = "row";
+					modalBodyElem.appendChild(currentRow);
 				}
-
-			formGroupElem.appendChild(selectInput);
-			} else {
-			const inputElem = document.createElement("input");
-			inputElem.className = "form-control";
-			inputElem.dataset.editorid = column.id;
-			inputElem.value = modalType === "edit" && dataContext ? dataContext[column.field] : ""; // pre-filling in the edit mode;
-			formGroupElem.appendChild(inputElem);
-			}
-
-			//formGroupElem.appendChild(inputElem);
-
-			colElem.appendChild(formGroupElem);
-			currentRow.appendChild(colElem);
+	
+				const colElem = document.createElement("div");
+				colElem.className = "col-lg-6";
+	
+				const formGroupElem = document.createElement("div");
+				formGroupElem.className = "mb-3";
+	
+				const detailLabelitem = document.createElement("div");
+				detailLabelitem.className = "form-label";
+				detailLabelitem.textContent = column.name;
+	
+				const inputElem = document.createElement("input");
+				inputElem.className = "form-control";
+				inputElem.dataset.editorid = column.id;
+				inputElem.value =
+				modalType == "edit" ? dataContext[column.field] : ""; // pre-filling in the edit mode;
+	
+				formGroupElem.appendChild(detailLabelitem);
+	
+				if ( column.id === "fileDelYn" || column.id === "uiSelYn" || column.id === "useYn" || column.id === "vrfUseYn") {
+					const selectInput = document.createElement("select");
+					selectInput.className = "form-select";
+					selectInput.dataset.editorid = column.id;
+	
+					const defaultOption = document.createElement("option");
+					defaultOption.value = "";
+					defaultOption.textContent = "-options-";
+					selectInput.appendChild(defaultOption);
+	
+					let optionsData = [];
+					optionsData = selYn;
+	
+					optionsData.forEach((option) => {
+						const optionElem = document.createElement("option");
+						optionElem.value = option.value;
+						optionElem.textContent = option.text;
+						selectInput.appendChild(optionElem);
+					});
+	
+					if (modalType === "edit") {
+						selectInput.value = dataContext[column.field] || "";
+					}
+	
+					formGroupElem.appendChild(selectInput);
+				} else {
+					const inputElem = document.createElement("input");
+					inputElem.className = "form-control";
+					inputElem.dataset.editorid = column.id;
+					inputElem.value = modalType === "edit" && dataContext ? dataContext[column.field] : ""; // pre-filling in the edit mode;
+					formGroupElem.appendChild(inputElem);
+					
+					if(modalType === "edit" && column.id === "seqNo"){
+						inputElem.disabled = true;
+					}
+				}
+				//formGroupElem.appendChild(inputElem);
+	
+				colElem.appendChild(formGroupElem);
+				currentRow.appendChild(colElem);
 			});
 
 			if (modalColumns.length % columnsPerShow !== 0) {
@@ -650,5 +653,5 @@
 			}); 
 		}
 		</script>
-</th:block>
+	</th:block>
 </html>
