--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -136,13 +136,20 @@
 	        },
             success: function (data) {
                 
-            	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
-                alert("Your request has been sent successfully. Please check your e-mail in a few minutes.");
-
-				console.log("AJAX request successful. Data received:", data);
-				
-				$("#pageName").val(data.redirectUrl);
-				$("#form").submit();
+            	if ( data.resultCode == "200" ) {
+	            	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
+	                alert("Your request has been sent successfully. Please check your e-mail in a few minutes.");
+	
+					console.log("AJAX request successful. Data received:", data);
+					
+					$("#pageName").val(data.redirectUrl);
+					$("#form").submit();
+            	} else {
+	            	//alert("입력한 정보를 확인하세요. 이 메시지가 계속 표시되면 관리자에게 문의하세요.");
+	                alert("Please check the information you entered. If you continue to see this message, please contact your administrator.");
+	                
+					console.log("AJAX request fail. Data received:", data);
+            	}
             },
             error: function (xhr, status, error) {
                 //alert("오류가 발생했습니다. 다시 시도해주세요.");
@@ -168,8 +175,8 @@
 					contentType: "application/json; charset=utf-8",
 					success: function (response, textStatus, xhr) {
 						if(xhr.status == 200) {
-						console.log("Success Logout. Go to Login page.");
-						$.get("/TokenRefresh", function(data) {
+							console.log("Success Logout. Go to Login page.");
+							$.get("/TokenRefresh", function(data) {
 							var newCsrfToken = data;  // 새로운 CSRF 토큰
 							// 기존 메타 태그 및 hidden input에서 CSRF 토큰을 업데이트
 							$("meta[name='_csrf_token']").attr("content", newCsrfToken);
